apps/jp3d-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: jp3d-web
  namespace: ynoacamino
  labels:
    app: jp3d-web

spec:
  replicas: 1
  selector:
    matchLabels:
      app: jp3d-web
  template:
    metadata:
      labels:
        app: jp3d-web
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: jp3d-web
          image: ghcr.io/jp3d-code/website:v0.3
          imagePullPolicy: Always

          ports:
            - containerPort: 3000
              protocol: TCP

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          volumeMounts:
            - name: jp3d-web-pvc-db
              mountPath: /app/data
            - name: jp3d-web-pvc-media
              mountPath: /app/media

      volumes:
        - name: jp3d-web-pvc-db
          persistentVolumeClaim:
            claimName: jp3d-web-pvc-db
        - name: jp3d-web-pvc-media
          persistentVolumeClaim:
            claimName: jp3d-web-pvc-media
