apps/jp3d-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: jp3d-web
  namespace: ynoacamino
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/redirect-entry-point: https

spec:
  tls:
    - hosts:
        - jp3d-web.ynoacamino.me
      secretName: jp3d-web-tls

  rules:
    - host: jp3d-web.ynoacamino.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jp3d-web
                port:
                  number: 80
